--- a/.github/workflows/nightly-pull.yml
+++ b/.github/workflows/nightly-pull.yml
@@ -24,6 +24,25 @@ jobs:
         run: |
           echo "$SFDX_AUTH_URL" > sfdx_auth.txt
           sfdx force:auth:sfdxurl:store -f sfdx_auth.txt -a devOrg
+      
+      - name: Show which org we authenticated
+        run: |
+          sfdx force:org:display -u devOrg
+
+      - name: Confirm manifest in repo
+        run: |
+          ls -l manifest/package.xml
+          head -n 40 manifest/package.xml || true
+
+      - name: Sanity retrieve a tiny type
+        run: |
+          # Replace with something you just edited; CustomLabel is a good smoke test
+          sfdx force:source:retrieve -u devOrg -m CustomLabel -w 5 || true
+
+      - name: Show git status/diff BEFORE staging
+        run: |
+          git status -s || true
+          git diff --name-only || true
 
       - name: Retrieve metadata
         run: sfdx force:source:retrieve -u devOrg -x manifest/package.xml -w 20
